[project]
name = "servarr-webhooks"
version = "0.1.0"
description = "Webhook service for Sonarr, Radarr, and Overseerr"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "plexapi>=4.15",
    "pydantic>=2.0",
    "requests>=2.32.5",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
